# coding-test-selfdrill

./: pyproject.toml
aoj/: ALDS1_1_A.py  ALDS1_1_B.py
